Modify: made width of all SubsProd Components same & flexibly change by browser size together

--- a/src/pages/SubsList/SubsList.scss
+++ b/src/pages/SubsList/SubsList.scss
@@ -30,6 +30,7 @@
     justify-content: space-between;
     padding: 50px;
     margin-bottom: 20px;
+    width: 60vw;
     border: 1px solid $border-gray;
     border-radius: $radio-size;
     box-shadow: 5px 3px 3px $border-gray;
