Add : ProductList에 HTML과 CSS를 추가하고, 컴포넌트를 쪼개 컴포넌트 재활용이 용이하게 만듦

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,9 +1,9 @@
-$font-gray : #6F7174;
-$border-gray : #D5E0DB;
-$theme-green : #2AB16F;
+$font-gray: #6f7174;
+$border-gray: #d5e0db;
+$theme-green: #2ab16f;
 
-$headline : 20px;
-$body : 14px;
+$headline: 20px;
+$body: 14px;
 $caption: 12px;
 
 $radio-size: 20px;
