--- a/src/pages/ProductList/ProductList.scss
+++ b/src/pages/ProductList/ProductList.scss
@@ -57,7 +57,7 @@
               cursor: pointer;
             }
 
-            .navElement {
+            .navElementSelected {
               background-color: $theme-green;
               border: 1px solid $theme-green;
               border-radius: 2px;
