Add: useState 메뉴

--- a/src/pages/Details/Details.scss
+++ b/src/pages/Details/Details.scss
@@ -1,7 +1,7 @@
-/* eslint-disable */
 @import '../../styles/variables.scss';
 
 .menuDetails {
+  color: #3d3d3d;
   .menuBody {
     padding: 100px 300px;
     font-size: 16px;
@@ -10,9 +10,6 @@
       display: flex;
       // justify-content: center;
       margin-top: 150px;
-      img {
-        // width: 400px;
-      }
 
       .menuInfo {
         transform: translate(50%);
@@ -24,6 +21,7 @@
             padding-bottom: 10px;
             font-weight: bold;
             font-size: 24px;
+            color: #111;
           }
           p {
             padding: 10px 0;
@@ -32,6 +30,7 @@
           .price {
             font-weight: bold;
             font-size: 24px;
+            color: #111;
           }
         }
         .productExplanation {
@@ -50,6 +49,7 @@
           padding-bottom: 30px;
           // @include flex-center;
           border-bottom: 1px solid;
+          position: relative;
 
           .selectSize {
             @include flex-center;
@@ -57,18 +57,22 @@
             padding: 20px 0;
 
             details {
+              // position: absolute; absolute쓰면 top,left px써야하는지
+              // @include flex-center;
+              // align-items: center;
               width: 280px;
               height: 40px;
-              padding: 10px;
-              border: 1px solid;
+              padding: 12px;
+              border: 1px solid #3d3d3d;
+              summary {
+                font-size: 13px;
+                color: #979797;
+              }
               div {
-                border: 1px solid;
+                border: 1px solid #3d3d3d;
                 border-top: 0;
                 padding: 10px;
                 // transform: translate();
-                .medium {
-                  // transform: translate(20px);
-                }
               }
             }
           }
@@ -77,9 +81,18 @@
               padding-bottom: 20px;
             }
 
-            .additionOptions {
-              div {
+            .additionalOptionList {
+              // div {
+              //   @include flex-center;
+              // }
+              .additionalOption {
                 @include flex-center;
+                justify-content: space-between;
+                padding: 5px 0;
+                .checkboxAndOption {
+                  @include flex-center;
+                  justify-content: flex-start;
+                }
               }
 
               .optionCheckbox {
@@ -89,9 +102,6 @@
                 border: 1px solid #ddd;
                 background-color: #fff;
                 margin-right: 8px;
-              }
-              .price {
-                justify-content: flex-end;
               }
             }
           }
@@ -109,7 +119,7 @@
             height: 50px;
             opacity: 1;
             &:disabled {
-              opacity: 0.8;
+              opacity: 0.85;
             }
             &:hover {
               cursor: pointer;
@@ -144,7 +154,7 @@
         @include flex-center;
         justify-content: space-between;
         .recommendationWrap {
-          width: 250px;
+          width: 290px;
           img {
             width: 100%;
           }
@@ -156,6 +166,7 @@
           }
           p {
             padding: 5px 0;
+            font-size: 14px;
           }
         }
       }
