Add: added animation effects on mouse over action

--- a/src/pages/SubsList/SubsList.scss
+++ b/src/pages/SubsList/SubsList.scss
@@ -1,5 +1,19 @@
 @import '../../styles/variables.scss';
 
+@mixin img-positioning {
+  &[position="right"] {
+    img {
+      order: 1;
+    }
+  }
+
+  &[position="left"] {
+    .subsProdText {
+      text-align: end;
+    }
+  }
+}
+
 .subsList {
   @include flex-center;
   flex-direction: column;
@@ -25,7 +39,7 @@
 
   }
 
-  .subsProd {
+  .subsProdDefault {
     @include flex-center;
     justify-content: space-between;
     padding: 50px;
@@ -34,46 +48,75 @@
     border: 1px solid $border-gray;
     border-radius: $radio-size;
     box-shadow: 5px 3px 3px $border-gray;
+    cursor: pointer;
 
     .subsProdImg {
       width: 20%;
-    }
-
-    .subsProdName {
-      margin-bottom: 10px;
     }
 
     .subsProdText {
       display: flex;
       flex-direction: column;
 
-      .subsProdDesc {
-        font-size: $headline;
-      }
       .subsProdName {
+        margin-bottom: 10px;
         font-size: 38px;
         font-weight: bold;
         color: $theme-green;
+      }
+
+      .subsProdDesc {
+        font-size: $headline;
       }
   
       .subsProdSub {
         padding-top: 30px;
         color: $font-gray;
       }
-
-    }
-
-    &[position="right"] {
-      img {
-        order: 1;
-      }
-    }
-
-    &[position="left"] {
-      .subsProdText {
-        text-align: end;
-      }
     }
     
+    @include img-positioning()
   }
+
+    .subsProdEmphasized {
+      @include flex-center;
+      justify-content: space-between;
+      padding: 50px;
+      margin-bottom: 20px;
+      width: 62vw;
+      border: 1px solid $border-gray;
+      border-radius: $radio-size;
+      background-color: $theme-green;
+      box-shadow: 5px 3px 3px $border-gray;
+      cursor: pointer;
+  
+      .subsProdImg {
+        width: 22%;
+        filter: brightness(100);
+      }
+  
+      .subsProdText {
+        display: flex;
+        flex-direction: column;
+  
+        .subsProdName {
+          margin-bottom: 10px;
+          font-size: 40px;
+          font-weight: bold;
+          color: white;
+        }
+
+        .subsProdDesc {
+          font-size: $headline+2;
+          color: white;
+        }
+    
+        .subsProdSub {
+          padding-top: 30px;
+          color: $border-gray;
+        }
+      }
+
+      @include img-positioning()
+    }
 }
