nav바 합쳐서 css 수정

--- a/src/pages/SignUp/SignUp.scss
+++ b/src/pages/SignUp/SignUp.scss
@@ -16,8 +16,6 @@
     flex-direction: column;
     // display: flex;
     // justify-content: center;
-    // margin-top: 400px;
-
     // background-color: lightgray;
     // margin: 200px 0;
 
@@ -27,6 +25,7 @@
       text-align: center;
       margin: 50px 110px 30px 110px;
       padding: 40px;
+      margin-top: 200px;
 
       img {
         width: 150px;
