--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -120,8 +120,10 @@
 
   .themeColor {
     color: $theme-green;
+    text-decoration: none;
   }
   .fontGray {
     color: $font-gray;
+    text-decoration: none;
   }
 }
