--- a/src/pages/SubsOpt/SubsOpt.scss
+++ b/src/pages/SubsOpt/SubsOpt.scss
@@ -65,7 +65,7 @@
         font-size: 1.7vw;
       }
   
-      .step {
+      .subsStep {
         margin-top: 10px;
         font-weight: bold;
         font-size: 1.8vw;
@@ -95,21 +95,27 @@
     }
 
     .subsOptSelect {
+      display: inline;
+          
       input[type="radio"] {
+        vertical-align: -30%;
         -webkit-appearance: none;
         -moz-appearance: none;
         appearance: none;
-        margin-right: 5px;
+        margin: 5px;
         border-radius: 50%;
-        width: 1.3vw;
-        height: 1.3vw;
+        width: 1.6vw;
+        height: 1.6vw;
         border: 1px solid $font-gray;
-        font-size: 1.8vw;
         transition: 0.2s all linear;
 
         &:checked {
           border: 5px solid $theme-green;
        }
+      }
+
+      label {
+        font-size: 1.8vw;
       }
     }
   }
