--- a/src/pages/Details/Details.scss
+++ b/src/pages/Details/Details.scss
@@ -78,6 +78,10 @@
                 color: #979797;
               }
 
+              .medium {
+                margin-top: 13px;
+                // border-bottom: #3d3d3d;
+              }
               div {
                 border: 1px solid #3d3d3d;
                 border-top: 0;
@@ -88,6 +92,7 @@
           }
 
           .selectAddition {
+            padding-top: 20px;
             h3 {
               padding-bottom: 20px;
             }
