--- a/src/pages/Login/Login.scss
+++ b/src/pages/Login/Login.scss
@@ -63,6 +63,10 @@
     }
   }
   .advertiseBanner {
+    a {
+      color: $font-gray;
+      text-decoration: none;
+    }
     img {
       width: 420px;
       height: 135px;
@@ -120,12 +124,38 @@
       // line-height: 10px;
     }
   }
-  .loginBtn {
+  // .loginBtn {
+  //   // width: 420px;
+  //   // padding: 13px 10px;
+  //   padding: 15px 190px;
+  //   // 얘는 왜 패딩..190...?
+  //   border: none;
+  //   background-color: #c9cacc;
+  //   color: white;
+  //   border-radius: 3px;
+  //   font-size: 15px;
+  //   cursor: pointer;
+  // }
+  .active {
     // width: 420px;
     // padding: 13px 10px;
     padding: 15px 190px;
     // 얘는 왜 패딩..190...?
     border: none;
+    background-color: $theme-green;
+    color: white;
+    border-radius: 3px;
+    font-size: 15px;
+    cursor: pointer;
+  }
+
+  .unActive {
+    // width: 420px;
+    // padding: 13px 10px;
+    padding: 15px 190px;
+    // 얘는 왜 패딩..190...?
+    border: none;
+
     background-color: #c9cacc;
     color: white;
     border-radius: 3px;
@@ -160,6 +190,10 @@
     padding-bottom: 10px;
     margin-bottom: 100px;
     cursor: pointer;
+    a {
+      color: $font-gray;
+      text-decoration: none;
+    }
 
     .find {
       display: flex;
@@ -175,7 +209,4 @@
       }
     }
   }
-}
-.fontGray {
-  color: $font-gray;
 }
