--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -1,7 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Lobster&family=Noto+Sans+KR:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lobster&family=Noto+Sans+KR:wght@400;600;700&display=swap');
 
 * {
   box-sizing: border-box;
   font-family: 'Noto Sans KR', sans-serif;
 }
-
