자동로그인 체크박스 css구현 fetch 함수 입력

--- a/src/pages/Login/Login.scss
+++ b/src/pages/Login/Login.scss
@@ -110,17 +110,32 @@
   .autoLogin {
     width: 420px;
     margin: 10px;
+    padding: 10px 0;
     color: #c9cacc;
     @include flex-center;
 
     input[type='checkbox'] {
-      width: 20px;
-      height: 20px;
-      margin-right: 7px;
-      cursor: pointer;
+      display: none;
+
+      + label {
+        display: inline-block;
+        width: 20px;
+        height: 20px;
+        background-color: white;
+        margin-right: 7px;
+        cursor: pointer;
+        border: 1px solid $border-gray;
+        border-radius: 3px;
+      }
+      &:checked + label {
+        background: url(../../../public/images/checked.png) $theme-green
+          no-repeat center/20px 20px;
+      }
     }
     span {
       font-size: 16px;
+      font-weight: 500;
+      // color: $font-gray;
       // line-height: 10px;
     }
   }
