--- a/src/pages/SignUp/SignUp.scss
+++ b/src/pages/SignUp/SignUp.scss
@@ -194,9 +194,26 @@
     .maleCheck,
     .nobodyCheck {
       display: flex;
+      align-items: center;
       font-size: 16px;
       color: $font-gray;
       // radio크기 키우는 법.. 알아오자...
+      input[type='radio'] {
+        display: none;
+        + label {
+          display: inline-block;
+          width: 17px;
+          height: 17px;
+          background: #e7e7e7;
+          border-radius: 50px;
+          margin-right: 7px;
+          cursor: pointer;
+        }
+        &:checked + label {
+          background: url('../../../public/images/gendercheck.png') no-repeat
+            center/17px auto;
+        }
+      }
     }
     span {
       color: $font-gray;
@@ -213,6 +230,15 @@
   }
   .allergy {
     margin-bottom: 35px;
+    width: 380px;
+
+    div {
+      color: $font-gray;
+    }
+
+    span {
+      margin-bottom: 10px;
+    }
     input {
       margin-top: 10px;
     }
