Add: Showing predicted price and Emphasize selected option

--- a/src/pages/SubsOpt/SubsOpt.scss
+++ b/src/pages/SubsOpt/SubsOpt.scss
@@ -134,7 +134,7 @@
       font-size: 1.4vw;
       color: $font-gray;
 
-      .subsOptSize :nth-child(2) {
+      .emphasize {
         font-weight: bold;
         color: $theme-green;
       }
