css, fetch함수 수정

--- a/src/pages/Login/Login.scss
+++ b/src/pages/Login/Login.scss
@@ -98,7 +98,7 @@
       // padding: 15px 135px;
       border: 1px solid #c9cacc;
       border-radius: 3px;
-      color: #c9cacc;
+      // color: #c9cacc;
       &:focus {
         outline: 1px solid $theme-green;
       }
