이미지 크기 수정 리팩토링만 하면 끝일 듯!

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -15,6 +15,10 @@
       justify-content: space-between;
       height: 42px;
       margin-bottom: 45px;
+      img {
+        width: 170px;
+        height: 35px;
+      }
       .footerFirstRight {
         cursor: pointer;
         display: flex;
