--- a/src/pages/SubsDetail/SubsDetail.scss
+++ b/src/pages/SubsDetail/SubsDetail.scss
@@ -10,7 +10,11 @@
   .imgAndInfo {
     display: flex;
     max-width: 1200px;
-    .img {
+    .carousel {
+      width: 486px;
+      display: flex;
+      flex-direction: column;
+
       img {
         width: 486px;
         height: 486px;
@@ -21,6 +25,21 @@
         font-size: 16px;
         display: flex;
         justify-content: space-between;
+      }
+      .carouselControls {
+        width: 486px;
+        height: 486px;
+        padding: 18px;
+        position: absolute;
+        display: flex;
+        justify-content: space-between;
+        background-color: rgba(33, 33, 103, 0.4);
+
+        .fas {
+          top: 50%;
+          font-size: 24px;
+          color: #fff;
+        }
       }
     }
 
