--- a/src/pages/Details/Details.scss
+++ b/src/pages/Details/Details.scss
@@ -56,7 +56,7 @@
         .productSelect {
           padding-bottom: 30px;
           // @include flex-center;
-          border-bottom: 1px solid;
+          // border-bottom: 1px solid;
           position: relative;
 
           .selectSize {
@@ -136,7 +136,10 @@
             .selectedDetailTitle {
               @include flex-center;
               justify-content: space-between;
-              padding: 20px 0;
+              padding: 20px 10px 30px 10px;
+              margin-bottom: 20px;
+              border-top: 1px solid $border-gray;
+              border-bottom: 1px solid $border-gray;
 
               img {
                 width: 25px;
@@ -171,7 +174,8 @@
         .productPrice {
           @include flex-center;
           justify-content: space-between;
-          padding: 30px 0;
+          padding: 40px 0;
+          border-top: 1px solid#3d3d3d;
         }
 
         .makeAnOrder {
