--- a/src/pages/SubsOpt/SubsOpt.scss
+++ b/src/pages/SubsOpt/SubsOpt.scss
@@ -97,27 +97,63 @@
     .subsOptSelectList {
       
       .subsOptSelect {
-        display: inline;
-            
-        input[type="radio"] {
-          vertical-align: -30%;
-          -webkit-appearance: none;
-          -moz-appearance: none;
-          appearance: none;
-          margin: 5px;
-          border-radius: 50%;
-          width: 1.6vw;
-          height: 1.6vw;
+        @include flex-center;
+        flex-direction: column;
+        margin-bottom: 1vw;
+
+        .radioBtn {
+          display: inline;
+          padding-right: 1.8vw;
+
+          input[type="radio"] {
+            vertical-align: -30%;
+            -webkit-appearance: none;
+            -moz-appearance: none;
+            appearance: none;
+            margin: 5px;
+            border-radius: 50%;
+            width: 1.6vw;
+            height: 1.6vw;
+            border: 1px solid $font-gray;
+            transition: 0.2s all linear;
+  
+            &:checked {
+              border: 5px solid $theme-green;
+            }
+          }
+  
+          label {
+            font-size: 1.8vw;
+          }
+        }
+
+        input[type="date"] {
+          padding: 0.4vw;
           border: 1px solid $font-gray;
-          transition: 0.2s all linear;
+          border-radius: $radio-size;
+          color: $font-gray;
+          text-align: center;
 
-          &:checked {
-            border: 5px solid $theme-green;
-        }
+          &:focus {
+            outline: 1px solid $theme-green;
+          }
         }
 
-        label {
-          font-size: 1.8vw;
+        .dietOptBtn {
+          width: 15vw;
+          padding: 0.4vw;
+          background-color: #C9CACC;
+          border: none;
+          border-radius: $radio-size;
+          font-size: $body;
+          color: white;
+
+          &:hover {
+            background-color: $theme-green;
+            box-shadow: 2px 1px 1px $border-gray;
+            color: white;
+            cursor: pointer;
+          }
         }
       }
     }
