--- a/src/pages/SignUp/SignUp.scss
+++ b/src/pages/SignUp/SignUp.scss
@@ -177,7 +177,19 @@
     border-radius: 3px;
     margin-bottom: 50px;
     &:hover {
-      opacity: 0.9;
+      cursor: pointer;
+    }
+  }
+  .failure {
+    width: 380px;
+    padding: 15px;
+    border: none;
+    background-color: $theme-green;
+    color: white;
+    border-radius: 3px;
+    margin-bottom: 50px;
+    opacity: 0.8;
+    &:hover {
       cursor: pointer;
     }
   }
