--- a/src/pages/SubsOpt/SubsOpt.scss
+++ b/src/pages/SubsOpt/SubsOpt.scss
@@ -140,13 +140,13 @@
         }
 
         .dietOptBtn {
-          width: 15vw;
+          width: 17vw;
           padding: 0.4vw;
-          background-color: #C9CACC;
+          background-color: #e4e4e4;
           border: none;
           border-radius: $radio-size;
           font-size: $body;
-          color: white;
+          color: black;
 
           &:hover {
             background-color: $theme-green;
