Modify: 헤더 마진값 변경

--- a/src/pages/Details/Details.scss
+++ b/src/pages/Details/Details.scss
@@ -4,16 +4,28 @@
   color: #3d3d3d;
 
   .menuBody {
-    padding: 100px 300px;
+    padding: 100px 100px;
     font-size: 16px;
 
     .menuHeader {
+      // right: 50%;
+      // transform: translate(0 10%);
       display: flex;
-      // justify-content: center;
+      justify-content: center;
       margin-top: 150px;
+      padding: 100px 100px;
+
+      .picture {
+        img {
+          padding-right: 100px;
+          width: 500px;
+        }
+      }
 
       .menuInfo {
-        transform: translate(50%);
+        // position: relative;
+        // left: 50%;
+        // transform: translate(0 -50%);
 
         .menuName {
           padding-bottom: 20px;
@@ -194,13 +206,13 @@
           }
 
           .buttonBasket {
-            width: 200px;
+            width: 180px;
             color: $theme-green;
             background-color: white;
           }
 
           .buttonOrder {
-            width: 280px;
+            width: 250px;
             color: white;
             background-color: $theme-green;
           }
@@ -229,7 +241,7 @@
         justify-content: space-between;
 
         .recommendationWrap {
-          width: 290px;
+          width: 250px;
           img {
             width: 100%;
           }
@@ -248,6 +260,10 @@
     }
 
     .productInformation {
+      padding-top: 100px;
+      img {
+        width: 700px;
+      }
     }
   }
 }
