--- a/src/pages/Main/Main.scss
+++ b/src/pages/Main/Main.scss
@@ -1,15 +1,91 @@
 @import '../../styles/variables.scss';
 
 .main {
+  overflow: hidden;
+
   .container {
     display: flex;
-    flex-wrap: wrap;
-    width: 100%;
-    overflow: hidden;
-    height: 493px;
+    position: relative;
+    width: 400vw;
+    height: 450px;
     padding-top: 143px;
+    transition: transform 0.5s;
+    .leftBtn {
+      &::after {
+        content: '<';
+        font-size: 30px;
+        color: white;
+      }
+      position: absolute;
+      bottom: 130px;
+      left: 153px;
+      background-color: black;
+      opacity: 0.1;
+      width: 50px;
+      height: 50px;
+      border-radius: 100%;
+      border: 0;
+    }
+    .rightBtn {
+      // 왜 라스트 차일드는 안먹지..?
+      &::after {
+        content: '>';
+        font-size: 30px;
+        color: white;
+      }
+      position: absolute;
+      bottom: 130px;
+      left: 1188px;
+      background-color: blue;
+      width: 50px;
+      height: 50px;
+      border-radius: 100%;
+      background-color: black;
+      opacity: 0.1;
+      border: 0;
+    }
+  }
+
+  div {
+    width: 100vw;
+
     img {
       width: 100%;
     }
   }
 }
+
+// .leftBtn {
+//       &::after {
+//         content: '<';
+//         font-size: 30px;
+//         color: white;
+//       }
+//       position: absolute;
+//       bottom: 130px;
+//       left: 153px;
+//       background-color: black;
+//       opacity: 0.1;
+//       width: 50px;
+//       height: 50px;
+//       border-radius: 100%;
+//       border: 0;
+//     }
+//     .rightBtn {
+//       &::after {
+//         content: '>';
+//         font-size: 30px;
+//         color: white;
+//       }
+//       position: absolute;
+//       bottom: 130px;
+//       left: 1188px;
+//       background-color: blue;
+//       width: 50px;
+//       height: 50px;
+//       border-radius: 100%;
+//       background-color: black;
+//       opacity: 0.1;
+//       border: 0;
+//     }
+//   }
