Fixed : CSS를 고쳤습니다.

--- a/src/pages/SubsDetail/SubsDetail.scss
+++ b/src/pages/SubsDetail/SubsDetail.scss
@@ -47,7 +47,7 @@
         width: 486px;
         padding: 0 18px;
         position: absolute;
-        top: calc(50% - 44px);
+        top: 309px;
 
         .leftRightArrow {
           display: flex;
