Add: 리뷰 피드백

--- a/src/pages/Details/Details.scss
+++ b/src/pages/Details/Details.scss
@@ -27,7 +27,7 @@
         // left: 50%;
         // transform: translate(0 -50%);
 
-        .menuName {
+        .menuData {
           padding-bottom: 20px;
           border-bottom: 1px solid;
 
