--- a/src/pages/Main/Main.scss
+++ b/src/pages/Main/Main.scss
@@ -10,47 +10,31 @@
     height: 450px;
     padding-top: 143px;
     transition: transform 0.5s;
-    .leftBtn {
-      &::after {
-        content: '<';
-        font-size: 30px;
-        color: white;
-      }
+
+    .fa-angle-left {
       position: absolute;
       bottom: 130px;
       left: 153px;
-      background-color: black;
-      opacity: 0.1;
-      width: 50px;
-      height: 50px;
-      border-radius: 100%;
-      border: 0;
+      font-size: 40px;
+      color: white;
+      opacity: 0.5;
     }
-    .rightBtn {
+    .fa-angle-right {
       // 왜 라스트 차일드는 안먹지..?
-      &::after {
-        content: '>';
-        font-size: 30px;
-        color: white;
-      }
+      font-size: 40px;
+      color: white;
+      opacity: 0.5;
       position: absolute;
       bottom: 130px;
-      left: 1188px;
-      background-color: blue;
-      width: 50px;
-      height: 50px;
-      border-radius: 100%;
-      background-color: black;
-      opacity: 0.1;
-      border: 0;
+      left: 1260px;
     }
-  }
 
-  div {
-    width: 100vw;
+    div {
+      width: 100vw;
 
-    img {
-      width: 100%;
+      img {
+        width: 100%;
+      }
     }
   }
 }
