Modify: 선택사항 한 컴포넌트화

--- a/src/pages/Details/Details.scss
+++ b/src/pages/Details/Details.scss
@@ -153,6 +153,9 @@
               border-top: 1px solid $border-gray;
               border-bottom: 1px solid $border-gray;
 
+              .selectedPrice {
+              }
+
               img {
                 width: 25px;
                 &:hover {
